Added fallback scenario if no javascript is detected

--- a/AngularEersteOpzet/src/index.html
+++ b/AngularEersteOpzet/src/index.html
@@ -12,5 +12,9 @@
 </head>
 <body>
   <app-root></app-root>
+  
+  <noscript>
+    Please enable JavaScript to run this application.
+</noscript>
 </body>
 </html>
